--- a/templates/base_page.html
+++ b/templates/base_page.html
@@ -149,7 +149,7 @@
         <a href="#" class="close-btn">&times;</a>
         <a href="#" style="font-family: 'Roboto', sans-serif;">Data</a>
         <a href="/date-selection" style="font-family: 'Roboto', sans-serif;">VLF</a>
-        <a href="#" style="font-family: 'Roboto', sans-serif;">Equipment</a>
+        <a href="/equipment" style="font-family: 'Roboto', sans-serif;">Equipment</a>
         <a href="/contacts" style="font-family: 'Roboto', sans-serif;">Contacts</a>
     </div>
     <nav class="topnav">
@@ -164,7 +164,7 @@
                 </a>
                 <a href="/" class="header_1" style="text-align: center">
                     {#                  <img src="{% static 'fav-planet.png' %}" width=7% height=7%>#}
-                    <span style="display: inline-flex; align-items: center; justify-content: center; color: #ffffff; margin: 0 auto; font-size: 30px;">Geophysical Observatory Mikhnevo</span>
+                    <span style="font-family: 'Roboto', sans-serif; display: inline-flex; align-items: center; justify-content: center; color: #ffffff; margin: 0 auto; font-size: 30px;">Geophysical Observatory Mikhnevo</span>
                     {#              font-size: 3vw;#}
                 </a>
             </div>
@@ -184,7 +184,8 @@
     <br>
     {% block content %}{% endblock %}
     <div class="container px-4 py-5" id="main-contents">
-        <footer class="footer pt-3 mt-4 text-muted border-top">© IDG RAS
+        <footer class="footer pt-3 mt-4 text-muted border-top"
+                style="font-family: 'Roboto', sans-serif;">© IDG RAS
             <br>
             Institute of geosphere dynamics of Russian academy of sciences
         </footer>
