--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -36,7 +36,8 @@
                 background: #9aa9ab;
             }
         </style>
-        <a href="/" class="btn" style="float: right;">На главную страницу</a>
+        {#        <a href="/" class="btn" style="float: right;">На главную страницу</a>#}
+        <a href="/" class="btn" style="float: right;">To Home Page</a>
         <br/>
         <br/>
         Address: 38k1, Leninsky prospekt, Moscow, Russia, 119334
@@ -74,15 +75,15 @@
                         Email: geospheres@idg.chph.ras.ru
                     </p>
                     <br>
-                    <div>
-                        {#					<img id="image-phone" src="../img/phone.png">#}
-                        <p
-                                style="font-family: 'Roboto', sans-serif; float: right;">
-                            Phone number: 8 (499) 137-66-11
-                        </p>
-                        <br>
-                    </div>
                 </a>
+                {#					<img id="image-phone" src="../img/phone.png">#}
+                <a>
+                    <p style="font-family: 'Roboto', sans-serif; float: right;">
+                        Phone number: 8 (499) 137-66-11
+                    </p>
+                    <br>
+                </a>
+                {#            </div>#}
                 <a href="mailto:geospheres@idg.chph.ras.ru">
                     <div id="contact_us">
                         <p style="font-family: 'Roboto', sans-serif; float: right;">
@@ -90,6 +91,7 @@
                     </div>
                 </a>
             </div>
+            {#            </div>#}
         </div>
     </footer>
 {% endblock %}
