--- a/templates/vlf_data.html
+++ b/templates/vlf_data.html
@@ -46,62 +46,84 @@
         <br>
     </div>
     {#    <h3 class="fs-2">{{ date_test }}</h3>#}
-    <p><span class="fs-2"></span><br/>
-        <span class="fw-bold">{% if success %}{{ date_test }}
-            <style>
-                 .card_fig {
-                     margin: auto;
-                     display: block;
-                     border-radius: 10px;
-                     align-items: center;
-                     justify-content: center;
-                     height: 800px;
-                     width: 90%;
-                 / / left: 50 %;
-                     background: #c6d2da;
-                     flex-shrink: 2;
-                     text-decoration: none;
-                     color: white;
-                     vertical-align: middle;
-                     border: none;
-                 }
+    <span class="fs-2"></span><br/>
+    <div class="fw-bold">{% if success %}{{ date_test }}
+        <style>
+            .card_fig {
+                margin: auto;
+                display: block;
+                border-radius: 10px;
+                align-items: center;
+                justify-content: center;
+                height: 800px;
+                width: 90%;
+            / / left: 50 %;
+                background: #c6d2da;
+                flex-shrink: 2;
+                text-decoration: none;
+                color: white;
+                vertical-align: middle;
+                border: none;
+            }
 
-                 .fig {
-                 / / align-items: stretch;
-                     align-items: center;
-                     border: none;
-                 }
+            .vlf_picture {
+                margin: auto;
+                display: block;
+                border-radius: 10px;
+                align-items: center;
+                justify-content: center;
+                height: 800px;
+                width: 90%;
+            / / left: 50 %;
+                background: #c6d2da;
+                flex-shrink: 2;
+                text-decoration: none;
+                color: white;
+                vertical-align: middle;
+                border: none;
+            }
 
-                 .card_block {
-                     display: flex;
-                     flex-direction: column;
-                     align-items: flex-start;
-                     border: none;
-                 }
+            .fig {
+            / / align-items: stretch;
+                align-items: center;
+                border: none;
+            }
 
-                 .card {
-                     margin: auto;
-                     display: block;
-                     border: none;
-                 }
-            </style>
-            {% if no_data %}
-                <span>NO DATA</span>
-            {% else %}
-                <div id="card_block" class="card">
-                <div id="block" class="fig">
-                    <a class="card_fig">
-                        <picture>
-                            {% for image in images %}
-                                <img src='{{ image }}' height="150"/>
-                            {% endfor %}
-                        </picture>
-                    </a>
-                </div>
-            </div>
-            {% endif %}
-        {% else %}Ваш запрос завершился с ошибкой{% endif %}</span>.
-    </p>
+            .card_block {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                border: none;
+            }
+
+            .card {
+                margin: auto;
+                display: block;
+                border: none;
+            }
+        </style>
+        {% if no_data %}
+            <span>NO DATA</span>
+        {% else %}
+            <a class="card_fig row d-flex" style="align-items: center" id="card_fig">
+                <picture class="vlf_picture">
+                    {% for image in images %}
+                        <img id="img_{{ image }}" src='{{ image }}' width=100%
+                             style="display: block; align-items: center; justify-content: center; object-position: center;"/>
+                    {% endfor %}
+                </picture>
+            </a>
+            <script>
+                let h = 0;
+                {% for image in images %}
+                    h = document.getElementById('img_{{ image }}').height;
+                {% endfor %}
+                alert(h)
+                const card_fig = document.getElementById('card_fig');
+                card_fig.height = {{ num_pics }} * h;
+            </script>
+        {% endif %}
+    {% else %}Ваш запрос завершился с ошибкой.{% endif %}</div>
     {#    <h2 class="pb-2 border-bottom">Комментарий</h2>#}
     {#    <p>{{ comment }}</p>#}
 {% endblock %}
