--- a/templates/vlf_data.html
+++ b/templates/vlf_data.html
@@ -1,51 +1,42 @@
 {% extends "base_page.html" %}
 
 {% block pagetitle %}
-    All lessons
+    VLF data
 {% endblock %}
 
 {% block page-title %}
-    <p style="font-size:50px;" xmlns="http://www.w3.org/1999/html">Список слов по
-        урокам </p>
 {% endblock %}
 
 {% block page-lead %}
-    {#Этот сайт предназначен для изучения английского языка по карточкам. <br/>#}
-    {#Здесь Вы можете выучить новые слова, а потом проверить себя с помощью теста. <br/>#}
-    {#Также можно посмотреть общую статистику успеваемости.#}
-    {#<body>#}
-    {#    {% load static %}#}
-    {#    <img src="{% static 'pic_forest.jpg' %}" alt="Figure"/>#}
-    {#</body>#}
 {% endblock %}
 
 {% load static %}
 
 {% block content %}
+<body style='background-color: #dadfe0'>
     <div class="container px-4 py-5" id="main-contents">
         <br>
         <style>
             .btn {
                 float: left;
                 display: inline-block;
-                background: #c1d1d3;
-                font-size: 16px;
-                color: #0e0e0e;
+                background: #68819a;
+                font-size: 18px;
+                color: white;
                 font-family: 'Roboto', sans-serif;
-                border: #c1d1d3;
+                border: #68819a;
                 border-radius: 10px;
             }
 
             .btn:hover {
-                background: #9aa9ab;
+                background: #576f88;
+                color: #f8f8f8;
             }
         </style>
-        {#<a href="/date-selection" class="btn btn-info" style="font-size: 20px; color: white; background-color: #9aa9ab; border: #9aa9ab;">Вернуться к выбору даты</a>#}
         <a href="/date-selection" class="btn">Back to date picker</a>
         <a href="/" class="btn" style="float: right;">To Home Page</a>
         <br>
     </div>
-    {#    <h3 class="fs-2">{{ date_test }}</h3>#}
     <span class="fs-2"></span><br/>
     <div class="fw-bold">{% if success %}{{ date_test }}
         <style>
@@ -55,7 +46,7 @@
                 border-radius: 10px;
                 align-items: center;
                 justify-content: center;
-                height: 800px;
+                height: 4000px;
                 width: 90%;
             / / left: 50 %;
                 background: #c6d2da;
@@ -72,7 +63,7 @@
                 border-radius: 10px;
                 align-items: center;
                 justify-content: center;
-                height: 800px;
+                height: 4000px;
                 width: 90%;
             / / left: 50 %;
                 background: #c6d2da;
@@ -103,16 +94,31 @@
             }
         </style>
         {% if no_data %}
-            <span>NO DATA</span>
+            <span style="align-items: center;">NO DATA</span>
         {% else %}
-            <a class="card_fig row d-flex" style="align-items: center" id="card_fig">
-                <picture class="vlf_picture">
+{#            <body>#}
+            <style>
+                .img1 {
+                /*padding: 0;*/
+                /*margin: 0 auto auto 0;*/
+                margin: auto;
+                width: 100%;
+                max-width: 900px;
+                display: block;
+                align-items: center;
+                justify-content: center;
+            }
+            </style>
+{#            <a class="card_fig row d-flex" style="align-items: center" id="card_fig">#}
+                <picture>
                     {% for image in images %}
-                        <img id="img_{{ image }}" src='{{ image }}' width=100%
+{#                        (width, height) = image.size#}
+                        <img class="img1" id="img_{{ image }}" src='{{ image }}' width=100%
                              style="display: block; align-items: center; justify-content: center; object-position: center;"/>
                     {% endfor %}
                 </picture>
             </a>
+{#            </body>#}
             <script>
                 let h = 0;
                 {% for image in images %}
@@ -123,63 +129,14 @@
             </script>
         {% endif %}
     {% else %}Ваш запрос завершился с ошибкой.{% endif %}</div>
+</body>
+{#<div class="container px-4 py-5" id="main-contents">#}
+{#    <footer class="footer pt-3 mt-4 text-muted border-top"#}
+{#            style="font-family: 'Roboto', sans-serif; border-bottom: 1px solid #918e8e;">© IDG RAS#}
+{#        <br>#}
+{#            Institute of geosphere dynamics of Russian academy of sciences#}
+{#    </footer>#}
+{#</div>#}
     {#    <h2 class="pb-2 border-bottom">Комментарий</h2>#}
     {#    <p>{{ comment }}</p>#}
 {% endblock %}
-
-
-
-{#TEST#}
-{#<body>#}
-{#<br>#}
-{#                <style>#}
-{#                    .fig {#}
-{#                        /*padding: 0;*/#}
-{#                        /*margin: 0 auto auto 0;*/#}
-{#                        margin: auto;#}
-{#                        max-height: 600px;#}
-{#                        width: 90%;#}
-{#                        max-width: 900px;#}
-{#                        display: block;#}
-{#border-radius: 10px;#}
-{#                        /*flex-shrink: 0;*/#}
-{#                        align-items: center;#}
-{#                       /*top: 50%;*/#}
-{#                       /*transform: translateY(50%);*/#}
-{#                        justify-content: center;#}
-{#                        }#}
-{#                </style>#}
-{#    {% load static %}#}
-{#    <img class="fig" src="{% static 'pic_forest.jpg' %}" alt="Figure"/>#}
-{#</body>#}
-
-
-<!--<div class="container px-4 py-5" id="terms-table">-->
-<!--    <div class="table-responsive">-->
-<!--        <style>-->
-<!--            .tb { border-collapse: collapse; }-->
-<!--            .tb th, .tb td { padding: 5px; border: solid 1px #777; }-->
-<!--            .tb th { background-color: lightblue; }-->
-<!--        </style>-->
-<!--        <table class="tb" width="100%">-->
-<!--          <thead>-->
-<!--            <tr>-->
-<!--              <th scope="col" class="py-3">Номер урока</th>-->
-<!--              <th scope="col" class="py-3">Тема урока</th>-->
-<!--              <th scope="col" class="py-3">Слово</th>-->
-<!--              <th scope="col" class="py-3">Перевод</th>-->
-<!--            </tr>-->
-<!--          </thead>-->
-<!--          <tbody>-->
-<!--            {% for id, topic, word, translation in words %}-->
-    <!--            <tr>-->
-    <!--                <td class="py-3">{{ id }}</td>-->
-    <!--                <td class="py-3">{{ topic }}</td>-->
-    <!--                <td class="py-3">{{ word }}</td>-->
-    <!--                <td class="py-3">{{ translation }}</td>-->
-    <!--            </tr>-->
-    <!--            {% endfor %}-->
-<!--          </tbody>-->
-<!--        </table>-->
-<!--      </div>-->
-<!--</div>-->
